# 040-template-ocaml

./: README.md  docker-compose.yml  package.opam
.devcontainer/: devcontainer.json
doc/: TODO.md
docker/dev/: Dockerfile
